# final-nn-cb

./: digit_autoencoder.ipynb  pyproject.toml  test.ipynb  transcription_factors.ipynb
.github/workflows/: pytest.yml
data/: test_neg_seqs.fa  test_pos_seqs.txt
nn/: nn.py  preprocess.py
test/: test_nn.py
