[build-system]
requires = [
	"flit_core >=3.2,<4",
	"python_version >= '3.7'"
	]
build-backend = "flit_core.buildapi"

[project]
name = "final-nn-cb"
authors = [{name = "Cindy Pino-Barrios", email = "cindy.barrios@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest",
	"scikit-learn",
	"matplotlib",
	"pandas",
	"numpy",
]

[project.urls]
Home = "https://github.com/cindykhris/final-nn-cb"